disable ETC textures on ANGLE for now

BUG=658929
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2481403002
Cr-Commit-Position: refs/heads/master@{#430487}

Former-commit-id: 8477f6effb5584425e0f675e3326c334fccc19e7